Update README for OpenShift. Update init script to only install one version of Nexus to prevent rhel image stream collisions. Permission fixes. Fixes #37.